Fix spacing on homepage

--- a/src/Components/Pages/HomePage/Homepagesections/homepagesections.css
+++ b/src/Components/Pages/HomePage/Homepagesections/homepagesections.css
@@ -60,6 +60,10 @@
   margin-right: 11%;
   width: 80%;
 }
+.whychoose {
+  margin-left: 11%;
+  margin-top: 4%;
+}
 
 @media (max-width: 1059px) {
   .homepage-header {
@@ -71,9 +75,12 @@
   .subheader {
     font-size: 24px;
   }
-
   .subtext {
     font-size: 18px;
+  }
+  .whychoose {
+    margin-left: 0%;
+    margin-top: 4%;
   }
 }
 @media (max-width: 700px) {
